src/content/tools/docs/2.5/api/index.md
# API Reference

# Tests:

- [nf_core.bump_version](bump_version.md)
  - [`bump_nextflow_version()`](bump_version.md#nf_core.bump_version.bump_nextflow_version)
  - [`bump_pipeline_version()`](bump_version.md#nf_core.bump_version.bump_pipeline_version)
  - [`update_file_version()`](bump_version.md#nf_core.bump_version.update_file_version)
- [nf_core.create](create.md)
  - [`PipelineCreate`](create.md#nf_core.create.PipelineCreate)
- [nf_core.download](download.md)
  - [`DownloadProgress`](download.md#nf_core.download.DownloadProgress)
  - [`DownloadWorkflow`](download.md#nf_core.download.DownloadWorkflow)
- [nf_core.launch](launch.md)
  - [`Launch`](launch.md#nf_core.launch.Launch)
- [nf_core.licences](licences.md)
  - [`WorkflowLicences`](licences.md#nf_core.licences.WorkflowLicences)
- [nf_core.lint](lint.md)
  - [`run_linting()`](lint.md#nf_core.lint.run_linting)
  - [`PipelineLint`](lint.md#nf_core.lint.PipelineLint)
- [nf_core.list](list.md)
  - [`LocalWorkflow`](list.md#nf_core.list.LocalWorkflow)
  - [`RemoteWorkflow`](list.md#nf_core.list.RemoteWorkflow)
  - [`Workflows`](list.md#nf_core.list.Workflows)
  - [`get_local_wf()`](list.md#nf_core.list.get_local_wf)
  - [`list_workflows()`](list.md#nf_core.list.list_workflows)
  - [`pretty_date()`](list.md#nf_core.list.pretty_date)
- [nf_core.modules](modules.md)
- [nf_core.schema](schema.md)
  - [`PipelineSchema`](schema.md#nf_core.schema.PipelineSchema)
- [nf_core.sync](sync.md)
  - [`PipelineSync`](sync.md#nf_core.sync.PipelineSync)
  - [`PullRequestException`](sync.md#nf_core.sync.PullRequestException)
  - [`SyncException`](sync.md#nf_core.sync.SyncException)
- [nf_core.utils](utils.md)
  - [`GitHub_API_Session`](utils.md#nf_core.utils.GitHub_API_Session)
  - [`Pipeline`](utils.md#nf_core.utils.Pipeline)
  - [`anaconda_package()`](utils.md#nf_core.utils.anaconda_package)
  - [`check_if_outdated()`](utils.md#nf_core.utils.check_if_outdated)
  - [`custom_yaml_dumper()`](utils.md#nf_core.utils.custom_yaml_dumper)
  - [`fetch_wf_config()`](utils.md#nf_core.utils.fetch_wf_config)
  - [`file_md5()`](utils.md#nf_core.utils.file_md5)
  - [`get_biocontainer_tag()`](utils.md#nf_core.utils.get_biocontainer_tag)
  - [`get_repo_releases_branches()`](utils.md#nf_core.utils.get_repo_releases_branches)
  - [`is_file_binary()`](utils.md#nf_core.utils.is_file_binary)
  - [`is_pipeline_directory()`](utils.md#nf_core.utils.is_pipeline_directory)
  - [`is_relative_to()`](utils.md#nf_core.utils.is_relative_to)
  - [`load_tools_config()`](utils.md#nf_core.utils.load_tools_config)
  - [`nextflow_cmd()`](utils.md#nf_core.utils.nextflow_cmd)
  - [`parse_anaconda_licence()`](utils.md#nf_core.utils.parse_anaconda_licence)
  - [`pip_package()`](utils.md#nf_core.utils.pip_package)
  - [`plural_es()`](utils.md#nf_core.utils.plural_es)
  - [`plural_s()`](utils.md#nf_core.utils.plural_s)
  - [`plural_y()`](utils.md#nf_core.utils.plural_y)
  - [`poll_nfcore_web_api()`](utils.md#nf_core.utils.poll_nfcore_web_api)
  - [`prompt_pipeline_release_branch()`](utils.md#nf_core.utils.prompt_pipeline_release_branch)
  - [`prompt_remote_pipeline_name()`](utils.md#nf_core.utils.prompt_remote_pipeline_name)
  - [`rich_force_colors()`](utils.md#nf_core.utils.rich_force_colors)
  - [`setup_nfcore_dir()`](utils.md#nf_core.utils.setup_nfcore_dir)
  - [`setup_requests_cachedir()`](utils.md#nf_core.utils.setup_requests_cachedir)
  - [`sort_dictionary()`](utils.md#nf_core.utils.sort_dictionary)
  - [`strip_ansi_codes()`](utils.md#nf_core.utils.strip_ansi_codes)
  - [`validate_file_md5()`](utils.md#nf_core.utils.validate_file_md5)
  - [`wait_cli_function()`](utils.md#nf_core.utils.wait_cli_function)
